Feat: lombok mapper implementation (#8)
* chore: import maven-compiler-plugin with mapstruct

* feat: user mapper and fixes

* feat: scan mapper and fixes

* feat: template mapper and fixes

* feat: report mapper and fixes

* feat: patient mapper and fixes