@@ -1,13 +1,17 @@
 package hu.kvcspt.ctreportingtoolbackend.logic;
 
 import hu.kvcspt.ctreportingtoolbackend.dto.UserDTO;
+import hu.kvcspt.ctreportingtoolbackend.mapper.UserMapper;
 import hu.kvcspt.ctreportingtoolbackend.model.User;
 import hu.kvcspt.ctreportingtoolbackend.model.repository.UserRepository;
 import lombok.AllArgsConstructor;
+import lombok.NonNull;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
 @Log4j2
@@ -15,48 +19,29 @@ import java.util.List;
 public class UserService {
     private UserRepository userRepository;
     public List<UserDTO> getAllUsers(){
-        List<User> users = userRepository.findAll();
-        return users.stream().map(this::convertToDTO).toList();
+        return userRepository.findAll().stream().map(UserMapper.INSTANCE::fromEntity).collect(Collectors.toList());
     }
-    public UserDTO getUserById(Long id){
-        User user = userRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("User ID does not exist!"));
-        return convertToDTO(user);
+    public UserDTO getUserById(@NonNull Long id){
+        return userRepository.findById(id).map(UserMapper.INSTANCE::fromEntity).orElseThrow(() -> new NoSuchElementException("User with " + id + "id does not exist!"));
     }
-    public UserDTO updateUser(UserDTO user){
-        if(userRepository.existsById(user.getId())){
-            return convertToDTO(userRepository.save(fromUserDTO(user)));
-        }
-        throw new IllegalArgumentException("User not found!");
+    public UserDTO updateUser(@NonNull UserDTO userDTO){
+        User user = userRepository
+                .findById(userDTO.getId())
+                .orElse(UserMapper.INSTANCE.toEntity(userDTO));
+        return UserMapper.INSTANCE.fromEntity(userRepository.save(user));
     }
 
-    public UserDTO createUser(UserDTO user){
-        return convertToDTO(userRepository.save(fromUserDTO(user)));
+    public UserDTO createUser(@NonNull UserDTO userDTO){
+        User user = UserMapper.INSTANCE.toEntity(userDTO);
+        User savedUser = userRepository.save(user);
+        return UserMapper.INSTANCE.fromEntity(savedUser);
     }
 
-    public void deleteUser(UserDTO userDTO){
-        userRepository.delete(fromUserDTO(userDTO));
-        log.debug("User is deleted successfully");
-    }
-    private UserDTO convertToDTO(User user) {
-        return UserDTO.builder()
-                .id(user.getId())
-                .name(user.getName())
-                .password(user.getPassword())
-                .userName(user.getUsername())
-                .title(user.getTitle())
-                .role(user.getRole())
-                .build();
-    }
+    public void deleteUser(@NonNull Long id){
+        if(userRepository.existsById(id)){
+            userRepository.deleteById(id);
+            log.debug("User is deleted successfully");
 
-    // Method to convert UserDTO to User entity
-    private User fromUserDTO(UserDTO userDTO) {
-        return User.builder()
-                .id(userDTO.getId())
-                .name(userDTO.getName())
-                .userName(userDTO.getUserName())
-                .password(userDTO.getPassword())
-                .role(userDTO.getRole())
-                .title(userDTO.getTitle())
-                .build();
+        } else throw new NoSuchElementException("User not found with id: " + id);
     }
 }
